--- a/V2/frontend/src/components/ProductList.css
+++ b/V2/frontend/src/components/ProductList.css
@@ -2,8 +2,8 @@ body {
     color: #fff;
 }
 
-.container {
-    max-width: 1000px;
+.container-product-list {
+    max-width: 1300px;
     margin: 0 auto;
     padding: 20px;
     background-color: rgba(47, 134, 166, 0.832);
@@ -13,9 +13,9 @@ body {
 
 }
 
-.header-row {
+.header-row-product-list {
     display: grid;
-    grid-template-columns: 3fr 3fr 3fr 3fr 3fr 3fr;
+    grid-template-columns: 3fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr;
     font-weight: bold;
     margin-bottom: 15px;
     padding: 5px;
@@ -30,7 +30,7 @@ body {
 
 .product {
     display: grid;
-    grid-template-columns: 3fr 3fr 3fr 3fr 3fr 3fr;
+    grid-template-columns: 3fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr;
     border: 1px solid orange;
     border-radius: 5px;
     padding: 10px;
@@ -192,7 +192,7 @@ b {
     
     .product {
         display: grid;
-        grid-template-columns: 3fr 3fr 2fr 3fr 3fr;
+        grid-template-columns: 3fr 3fr 2fr 3fr 3fr 3fr 3fr;
         border: 1px solid orange;
         border-radius: 5px;
         padding: 10px;
@@ -201,3 +201,10 @@ b {
     }
 }
 
+.product-image-list {
+    margin-right: 0;
+    max-width: 100px;
+    max-height: 100px;
+    object-fit: cover;
+    border-radius: 4px;
+  }
