--- a/V2/frontend/src/components/HomePage.css
+++ b/V2/frontend/src/components/HomePage.css
@@ -1,6 +1,3 @@
-* {
-}
-
 body {
   background-color: black;
   font-family: Arial, Helvetica, sans-serif;
@@ -11,6 +8,8 @@ body {
 
 .home-page {
   padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .home-page-content {
@@ -74,7 +73,9 @@ body {
   color: #fff;
 }
 .p1 {
-  font-size: 60px;
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .RegistroHome {
@@ -113,7 +114,7 @@ body {
   align-items: center;
   margin-bottom: 20px;
   color: #fff;
-  margin: 10px 100px 0px 100px;
+  margin: 10px 10px 0px 100px;
   background: rgba(47, 134, 166, 0.6);
   border-radius: 20px;
   text-align: center;
