--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -1,6 +1,6 @@
 body {
   background-color: black;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Electrolize', sans-serif;
   background-image: url("../imagenes/fondo.svg");
   background-repeat: no-repeat;
   background-size: cover;
