--- a/frontend/src/components/NavigationBar.css
+++ b/frontend/src/components/NavigationBar.css
@@ -37,10 +37,10 @@
 .navigation-list {
   list-style-type: none;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   flex-grow: 1;
   margin-left: 10px;
-  margin-right: 325px;
+  margin-right: 90px;
 }
 
 .navigation-list li {
