--- a/frontend/src/components/NavigationBar.css
+++ b/frontend/src/components/NavigationBar.css
@@ -37,7 +37,7 @@
 .navigation-list {
   list-style-type: none;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   flex-grow: 1;
   margin-left: 10px;
   margin-right: 250px;
