--- a/frontend/src/components/NavigationBar.css
+++ b/frontend/src/components/NavigationBar.css
@@ -19,8 +19,12 @@
   transition: background-color 0.3s ease;
 }
 
+.navigation-container {
+  background-color: transparent;
+}
+
 .navigation-container.scrolled {
-  background-color: rgb(0, 24, 41); 
+  background-color: rgb(0, 0, 0, 0.1); 
 }
 
 .logo {
@@ -37,7 +41,7 @@
 .navigation-list {
   list-style-type: none;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   flex-grow: 1;
   margin-left: 10px;
   margin-right: 250px;
