--- a/frontend/src/pages/StorePage.css
+++ b/frontend/src/pages/StorePage.css
@@ -12,7 +12,7 @@
 
 .sidebar {
   width: 154px;
-  height: 200px;
+  height: auto;
   padding: 10px;
   background-color: rgb(47, 134, 166);
   border: 0.5px solid orange;
@@ -25,12 +25,12 @@
 .text-center {
   text-align: center;
   text-shadow: -1px -1px 0 rgb(47, 134, 166),
-    /* Sombra en la esquina superior izquierda (x, y, tamaño, color) */ 1px -1px
-      0 rgb(47, 134, 166),
-    /* Sombra en la esquina superior derecha (x, y, tamaño, color) */ -1px 1px 0
-      rgb(47, 134, 166),
-    /* Sombra en la esquina inferior izquierda (x, y, tamaño, color) */ 1px 1px
-      0 rgb(47, 134, 166);
+    /* Sombra en la esquina superior izquierda (x, y, tamaño, color) */
+    1px -1px 0 rgb(47, 134, 166),
+    /* Sombra en la esquina superior derecha (x, y, tamaño, color) */
+    -1px 1px 0 rgb(47, 134, 166),
+    /* Sombra en la esquina inferior izquierda (x, y, tamaño, color) */
+    1px 1px 0 rgb(47, 134, 166);
 }
 
 .sidebar h2 {
@@ -141,12 +141,12 @@ select {
   margin-top: 0;
   margin-bottom: 5px;
   text-shadow: -1px -1px 0 #000,
-    /* Sombra en la esquina superior izquierda (x, y, tamaño, color) */ 1px -1px
-      0 #000,
-    /* Sombra en la esquina superior derecha (x, y, tamaño, color) */ -1px 1px 0
-      #000,
-    /* Sombra en la esquina inferior izquierda (x, y, tamaño, color) */ 1px 1px
-      0 #000;
+    /* Sombra en la esquina superior izquierda (x, y, tamaño, color) */
+    1px -1px 0 #000,
+    /* Sombra en la esquina superior derecha (x, y, tamaño, color) */
+    -1px 1px 0 #000,
+    /* Sombra en la esquina inferior izquierda (x, y, tamaño, color) */
+    1px 1px 0 #000;
 }
 
 .product-card p {
@@ -175,7 +175,7 @@ select {
   cursor: pointer;
 }
 
-.product-card > p {
+.product-card>p {
   color: white;
 }
 
@@ -204,6 +204,7 @@ select {
   text-align: center;
 }
 
+
 @media (max-width: 600px) {
   .search-bar-products input {
     width: 150px;
@@ -224,6 +225,7 @@ select {
     margin-bottom: 0;
     margin-left: 0;
   }
+
   .product-card {
     transform: scale(0.8);
   }
@@ -232,7 +234,7 @@ select {
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: auto;
     margin-top: 0;
     margin-left: 0;
     transform: scale(0.8);
@@ -244,6 +246,7 @@ select {
     margin-right: 2px;
     border-right: 2px solid white;
   }
+
   .sidebar ul {
     display: flex;
     justify-content: space-between;
