--- a/frontend/src/components/ModalEditCategory.css
+++ b/frontend/src/components/ModalEditCategory.css
@@ -13,7 +13,7 @@
 }
 
 .modal-content-product {
-  background-color: #fff;
+  background-color: rgba(47, 134, 166);
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
