--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -6,7 +6,7 @@
   padding: 20px;
   border: 3px solid #FF8C00;
   border-radius: 5px;
-  background-color: rgba(47, 134, 166, 0.832);
+  background-color: rgba(47, 134, 166, 0.3);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   min-height: 300px; 
   display: flex;
@@ -40,7 +40,7 @@
 .login-button {
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
+  background: linear-gradient(45deg, rgb(0, 110, 255), #ff8c00);
   border: none;
   border-radius: 3px;
   color: #fff;
