--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -8,7 +8,7 @@
   margin-bottom: 5px;
   padding: 20px;
   border-radius: 4px;
-  background-color: rgba(47, 134, 166, 0.6);
+  background-color: rgba(47, 134, 166, 0.3);
   color: white;
 }
 
@@ -68,7 +68,7 @@
   cursor: pointer;
   display: inline-block;
   padding: 10px 15px;
-  background-color: #3498db;
+  background: linear-gradient(45deg, rgb(0, 110, 255), #ff8c00);
   color: #fff;
   border-radius: 5px;
 }
@@ -137,7 +137,7 @@
   padding: 5px;
   margin-bottom: 5px;
   transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease; /* Añade transición para opacidad */
-  background-color: #3498db;
+  background: linear-gradient(45deg, rgb(0, 110, 255), #ff8c00);
   border-radius: 10px;
   cursor: pointer;
   width: 80%; /* Ocupa todo el ancho del contenedor */
