--- a/frontend/src/pages/StorePage.css
+++ b/frontend/src/pages/StorePage.css
@@ -48,11 +48,11 @@
 }
 
 .sidebar li:hover {
-  color: greenyellow;
+  color: orange;
 }
 
 .sidebar li.selected {
-  color: greenyellow;
+  color: orange;
 }
 
 .product-list {
@@ -88,7 +88,7 @@ select {
   padding: 5px;
   max-height: 30px;
   background: linear-gradient(45deg, rgb(0, 110, 255), #ff8c00);
-  color: white;
+  color: black;
   border-radius: 4px;
 }
 
