--- a/frontend/src/pages/StorePage.css
+++ b/frontend/src/pages/StorePage.css
@@ -23,14 +23,14 @@
 }
 
 .text-center {
-  text-align: center;
-  text-shadow: -1px -1px 0 rgb(47, 134, 166),
-    /* Sombra en la esquina superior izquierda (x, y, tamaño, color) */
-    1px -1px 0 rgb(47, 134, 166),
-    /* Sombra en la esquina superior derecha (x, y, tamaño, color) */
-    -1px 1px 0 rgb(47, 134, 166),
-    /* Sombra en la esquina inferior izquierda (x, y, tamaño, color) */
-    1px 1px 0 rgb(47, 134, 166);
+  color: white;
+  text-shadow: -1px -1px 0 greenyellow,
+    /* Sombra en la esquina superior izquierda (x, y, tamaño, color) */ 1px -1px
+      0 orange,
+    /* Sombra en la esquina superior derecha (x, y, tamaño, color) */ -1px 1px 0
+      orange,
+    /* Sombra en la esquina inferior izquierda (x, y, tamaño, color) */ 1px 1px
+      0 orange;
 }
 
 .sidebar h2 {
