--- a/frontend/src/components/ShoppingCart.css
+++ b/frontend/src/components/ShoppingCart.css
@@ -82,6 +82,7 @@
 
 .separador-p {
   line-height: 0.3;
+  text-align: left;
 }
 
 .btn-buy {
@@ -274,4 +275,5 @@
     max-width: 80px;
     margin: 3px;
   }
+
 }
