--- a/frontend/src/pages/PagoPage.css
+++ b/frontend/src/pages/PagoPage.css
@@ -8,7 +8,7 @@
   padding: 20px;
   border-radius: 1%;
   background-color: rgba(47, 134, 166, 0.3);
-  color: rgb(170, 50, 50);
+  color: white;
   border: 1px solid #FF8C00;
 }
 
