--- a/frontend/src/components/ShoppingCart.css
+++ b/frontend/src/components/ShoppingCart.css
@@ -117,48 +117,49 @@
   padding-left: 20px;
 }
 
+/* Estilos base para ambos botones */
 .btn-add,
 .btn-remove {
-  font-size: 15px;
+  font-size: 18px;
+  padding: 8px 15px;
+  border: none;
+  border-radius: 25px; /* Bordes redondeados para un aspecto más suave */
+  margin: 5px;
+  cursor: pointer;
+  color: white;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease;
+  display: inline-flex;
+  align-items: center;
 }
 
+/* Estilos específicos para el botón de Añadir */
 .btn-add {
-  width: 35px;
-  height: 35px;
-  background-color: #f5f5f5;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  cursor: pointer;
+  background-color: #ff5f6d; /* Rosa intenso para el botón de añadir */
 }
 
 .btn-add:hover {
-  background-color: #e5e5e5;
+  background-color: #ff788c; /* Cambia el color al pasar el ratón por encima */
 }
 
 .btn-add:active {
-  background-color: #cccaca;
+  background-color: #ff4857; /* Cambia el color al hacer clic */
 }
 
+/* Estilos específicos para el botón de Eliminar */
 .btn-remove {
-  width: 35px;
-  height: 35px;
-  background-color: #f5f5f5;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  cursor: pointer;
+  background-color: #ffa94d; /* Amarillo brillante para el botón de eliminar */
+  margin-left: 10px; /* Añade un espacio entre los botones */
 }
 
 .btn-remove:hover {
-  background-color: #e5e5e5;
+  background-color: #ffc16b; /* Cambia el color al pasar el ratón por encima */
 }
 
 .btn-remove:active {
-  background-color: #cccaca;
+  background-color: #ff9733; /* Cambia el color al hacer clic */
 }
+
 
 .fa-icon-trash {
   font-size: 1.5em;
