--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -6,6 +6,17 @@ body {
   background-size: cover;
 }
 
+.boton-documentacion{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+
+.boton-docu{
+  width: auto !important;
+}
+
 .home-page {
   padding: 20px;
   max-width: 1200px;
