--- a/frontend/src/pages/VendorsPage.css
+++ b/frontend/src/pages/VendorsPage.css
@@ -1,5 +1,3 @@
-/* VendorsPage.css */
-
 .vendors-page {
   display: flex;
   flex-direction: column;
@@ -27,6 +25,17 @@ h2 {
 .search-bar select {
   padding: 5px;
   border-radius: 4px;
+}
+
+.search-bar-vendor {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  text-shadow:
+  -1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;
 }
 
 .vendor-list {
