--- a/frontend/src/pages/StorePage.css
+++ b/frontend/src/pages/StorePage.css
@@ -1,5 +1,3 @@
-/* StorePage.css */
-
 .store-page {
   display: flex;
   flex-direction: column;
@@ -131,7 +129,10 @@ select {
   background-color: rgba(47, 134, 166, 0.3);
   border: 1px solid orange;
   color: white;
+  font-size: 14px;
+  line-height: 1.5; 
 }
+
 
 .product-card p {
   text-align: left;
@@ -272,4 +273,10 @@ select {
     padding: 2px;
   }
 
+}
+.disponible-hasta {
+  border: 2px solid #000; 
+  padding: 8px; 
+  display: inline-block; 
+  background-color: #9d8989; 
 }
