--- a/frontend/src/pages/PagoPage.css
+++ b/frontend/src/pages/PagoPage.css
@@ -1,7 +1,3 @@
-
-
-/* PagoPage.css */
-
 body {
   font-family: 'Electrolize', sans-serif;
   background-color: #f4f4f4;
@@ -13,7 +9,7 @@ body {
     1px -1px 0 orange,
     -1px 1px 0 orange,
     1px 1px 0 orange;
-  margin-top: -60px;
+  margin-top: -30px;
 }
 
 .pagopage {
@@ -75,6 +71,8 @@ body {
   margin-right: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
+  width: 50em;
+  margin: 0 auto;
   padding: 10px;
   border-radius: 5px;
   display: grid;
@@ -137,4 +135,11 @@ body {
   .pagopage button {
     margin: 5px;
   }
+}
+
+.btn-buy {
+margin-left: 670px;
+margin-bottom: 0px;
+font-size: 15px;
+
 }
