STYLE PRODUCT PAGO

--- a/frontend/src/pages/PagoPage.css
+++ b/frontend/src/pages/PagoPage.css
@@ -143,3 +143,11 @@ margin-bottom: 0px;
 font-size: 15px;
 
 }
+
+.img-producto-factura {
+
+  width: 180px;
+  margin-left: 315px;
+  margin-bottom: 30px;
+  margin-top: -15px;
+  }
