--- a/frontend/src/components/ShoppingCart.css
+++ b/frontend/src/components/ShoppingCart.css
@@ -1,4 +1,3 @@
-/* Estilos base */
 .shopping-cart-title {
   font-size: 24px;
   color: #333;
@@ -64,16 +63,17 @@
 
 .total-price {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 20px;
+  font-size: 18px;
   margin-bottom: 20px;
   border-radius: 5px;
-  max-width: 1400px;
-  margin: 0px;
+  max-width: 230px;
+  margin: 25px;
   color: #ffffff;
   background-color: rgba(47, 134, 166, 0.3);
   border: 1px solid orange;
+  border-bottom-width: 5px; 
+  margin-left: 610px; 
+  padding-left: 40px
 }
 
 .total-price p {
@@ -88,14 +88,22 @@
 .btn-buy {
   font-size: 20px;
   color: #ffffff;
-  background: linear-gradient(45deg, rgb(0, 110, 255), #ff8c00);
+  background: linear-gradient(45deg, rgb(0, 149, 255), #ff0000);
   border: none;
-  border-radius: 5px;
+  border-radius: 7px;
   padding: 10px;
-  margin: 10px;
   cursor: pointer;
-  text-decoration: none;
-  display: inline-block;
+  max-width: 300px;
+  padding-right: 70px;
+  padding-left: 70px;
+  display: flex;
+}
+
+.btn-buy {
+
+padding: 17px;
+font-style: italic;
+margin: 20px;
 }
 
 .btn-delete {
@@ -191,7 +199,7 @@
   text-align: center;
 }
 
-/* Estilos para pantallas de 750px o menos */
+
 @media (max-width: 750px) {
   .shopping-cart-title {
     font-size: 18px;
@@ -221,7 +229,6 @@
   }
 }
 
-/* Estilos para pantallas de 480px o menos (celulares pequeños) */
 @media (max-width: 480px) {
   .shopping-cart-title {
     font-size: 16px;
@@ -276,4 +283,9 @@
     margin: 3px;
   }
 
+}
+
+p span {
+  display: block; 
+  margin-bottom: 10px; 
 }
