--- a/frontend/src/components/WhatsButton.css
+++ b/frontend/src/components/WhatsButton.css
@@ -10,6 +10,7 @@
     text-decoration: none; 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
     text-align: left;
+    margin-bottom: -20px;
     
     i {
       margin-right: 0px; 
