--- a/frontend/src/pages/PagoPage.css
+++ b/frontend/src/pages/PagoPage.css
@@ -152,21 +152,24 @@ font-size: 15px;
   margin-top: -15px;
   }
 
+.boton-enviar {
+  background-color: #56bbee;
+  color: #fff;
+  border: none;
+  padding: 4px 12px;
+  padding-right: 10px;
+  font-size: 14px;
+  border-radius: 8px;
+  margin-left: 650px;
+  text-align: center;
+  margin-top: -35px;
+  margin-right: 40px;
 
-
-
-  .boton-enviar {
-    background-color: #4caf50;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 17px;
-    border-radius: 8px;
-    transition: background-color 0.3s, box-shadow 0.3s;
-    cursor: pointer;
-    text-decoration: none;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    text-align: left;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  cursor: pointer;
+  text-decoration: none;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  text-align: left;
     
     i {
       margin-right: 0px; 
@@ -180,13 +183,13 @@ font-size: 15px;
     }
   }
   
-  .btn-enviar a {
+  .btn-whatsapp a {
     color: inherit;
     text-decoration: none;
   }
   
-  .image-enviar {
-
+  .image-whatsapp {
+  
     max-width: 25px;
     margin-left: 120px;
     margin-top: -23px;
