--- a/frontend/src/components/WhatsButton.css
+++ b/frontend/src/components/WhatsButton.css
@@ -11,6 +11,7 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
     text-align: left;
     margin-bottom: -20px;
+    margin-left: -40%;
     
     i {
       margin-right: 0px; 
