--- a/frontend/src/pages/PagoPage.css
+++ b/frontend/src/pages/PagoPage.css
@@ -178,7 +178,6 @@ font-size: 15px;
     }
 
        &:hover {
-      background-color: #45a049; 
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
     }
   }
@@ -194,3 +193,62 @@ font-size: 15px;
     margin-left: 120px;
     margin-top: -23px;
   }
+
+  .btn-share {
+    background-color: #56bbee;
+    color: #fff;
+    border: none;
+    padding: 24px 0px; 
+    font-size: 14px;
+    padding-top: 5px;
+    padding-bottom: 30px;
+    border-radius: 8px;
+    margin-left: -55%; 
+    margin-top: -35px; 
+    transition: background-color 0.3s, box-shadow 0.3s;
+    cursor: pointer;
+    text-decoration: none;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    text-align: center; /* Texto centrado */
+    display: inline-block; 
+  }
+  
+  .btn-share i {
+    margin-right: 0px; 
+    font-size: 20px;
+  }
+  
+  .btn-share:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+/* Estilo para el mensaje de enlace copiado */
+.copied-link-message {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  z-index: 9999;
+}
+
+/* Estilo para el texto dentro del mensaje */
+.copied-link-message-text {
+  font-size: 16px;
+}
+
+/* Estilo para el botón de cerrar el mensaje */
+.copied-link-message-close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+}
+
+  
+  
+  
+  
