--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -1,26 +1,50 @@
 .footer {
   color: #fff;
-  padding: 20px 0;
+  padding: 20px;
   text-align: center;
   margin-top: -10px;
+  font-size: 13px;
+  background-color: #3a3a3a; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
+  margin-left: -8px;
+  margin-right: -8px;
 }
 
 .footer-content {
   max-width: 1200px;
   margin: 0 auto;
+  margin-right: 40%;
+  font-size: 12px;
+} .icon {
+  max-width: 45px;
+  filter: invert(100%);
+}
+
+.footer-content a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  margin: 0 15px; 
+  margin-bottom: 30px;
+}
+
+.footer-content p {
+  margin-top: 5px; 
 }
 
 .footer-info {
-  background-color: #333;
+  background-color: #252525;
   color: #fff;
-  padding: 20px;
+  padding: 12px;
+  padding-right: 10%;
   text-align: center;
   width: 124%; 
-  margin-left: -169px; 
-  margin-right: -150px; 
-  font-size: 14px; 
+  margin-left: -496px; 
+  font-size: 11px; 
   margin-bottom: -27px;
 }
+
 
 .footer-info p {
   margin: 0 auto;
@@ -57,3 +81,46 @@ a {
     margin: 2px;
   }
 }
+
+.footer-title {
+ margin-right: 40%;
+ margin-bottom: 10px;
+}
+
+.footer-derechos {
+
+ margin-left: 30%;
+}
+
+.footer-contactos {
+  text-align: left;
+  margin-right: 0px;
+  margin-left: 40%;
+  margin-top: -120px;
+  margin-bottom: 3%;
+}
+
+.footer-contactos ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-contactos li {
+  margin-bottom: 10px;
+}
+
+.footer-contactos li strong {
+  font-weight: bold;
+}
+
+.footer-contactos a {
+  color: rgb(93, 171, 255); 
+  text-decoration: none; 
+}
+
+.footer-contactos a:hover {
+  text-decoration: none; 
+}
+
+
+
