--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -2,12 +2,13 @@
   color: #fff;
   padding: 20px;
   text-align: center;
-  margin-top: -10px;
+  margin-top: 5%;
   font-size: 13px;
   background-color: #3a3a3a; 
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
   margin-left: -8px;
   margin-right: -8px;
+
 }
 
 .footer-content {
