--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -285,4 +285,68 @@
   text-decoration: underline; 
 }
 
+.popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px; 
+  height: 300px; 
+  background-color: white;
+  border: 1px solid black;
+  padding: 20px;
+  color: black;
+}
+
+.popup.show { 
+  display: block;
+}
+
+.popup-content h2 {
+  color: blue;
+}
+
+.popup-info p {
+  color: black;
+  text-align: justify;
+}
+
+.popup-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.popup-buttons button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.popup-buttons button[type="button"] {
+  background-color: #007bff;
+  color: white;
+}
+
+.popup-buttons button[type="button"]:hover {
+  background-color: #0056b3;
+}
+
+.popup-buttons a {
+  text-decoration: none;
+}
+
+.popup-buttons a button[type="button"] {
+  background-color: #28a745;
+  color: white;
+}
+
+.popup-buttons a button[type="button"]:hover {
+  background-color: #218838;
+}
+
+
+
 
