--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -292,11 +292,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 500px; 
-  height: 300px; 
+  height: 290px;  
   background-color: white;
   border: 1px solid black;
   padding: 20px;
   color: black;
+  border-radius: 20px; 
 }
 
 .popup.show { 
@@ -304,48 +305,61 @@
 }
 
 .popup-content h2 {
-  color: blue;
+  color: rgb(2, 2, 2);
+  font-size: 18px;
+
 }
 
 .popup-info p {
-  color: black;
-  text-align: justify;
-}
+    color: black;
+    text-align: justify;
+    line-height: 1.5; 
+    font-size: 14px;
+  }
+  
 
-.popup-buttons {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-}
+  .popup-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  
+  .popup-buttons button,
+  .popup-buttons a button[type="button"] {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 30px; 
+  }
+  
+  .popup-buttons button[type="button"] {
+    background-color: #ffffff;
+    color: rgb(67, 45, 229);
+    border: 2px solid rgb(67, 45, 229);
+    cursor: pointer;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin-left: 10px;
+  }
+  
+  .popup-buttons button[type="button"]:hover {
+    background-color: #ffffff;
+  }
+  
+  
+  .popup-buttons a {
+    text-decoration: none;
+  }
+  
+  .popup-buttons a button[type="button"] {
+    background: linear-gradient(to right, #007bff, #e0351f); 
+    color: white;
+  }
+  
 
-.popup-buttons button {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
 
-.popup-buttons button[type="button"] {
-  background-color: #007bff;
-  color: white;
-}
 
-.popup-buttons button[type="button"]:hover {
-  background-color: #0056b3;
-}
-
-.popup-buttons a {
-  text-decoration: none;
-}
-
-.popup-buttons a button[type="button"] {
-  background-color: #28a745;
-  color: white;
-}
-
-.popup-buttons a button[type="button"]:hover {
-  background-color: #218838;
-}
 
 
 
